--- a/configure-prod-server.yml
+++ b/configure-prod-server.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: prod-server
+- hosts: Capstone1-prodserver
   become: true
   tasks:
   - name: update apt
@@ -12,4 +12,4 @@
     command: sudo systemctl start docker
 
   - name: deploy insureme application
-    command: sudo docker run -itd -p 8081:8081 shubhamkushwah123/insure-me:1.0
+    command: sudo docker run -itd -p 8081:8081 Kjas_insure-me-prod kjas13/capstone-project:1.0
